* 20191111 Switch Getopt to process an arbitrary list instead of manipulating
           ARGV for each call.
* 20191111 Check to see if there are any entries left in the option list
           after each stage of option processing and error if so.
* 20191111 Rework the command line reconstruction so that options that
           don't take an argument do not include one in the reconstruction.
* 20191111 Unexpected argument format for --timeout now errors and exits
           instead of silently using default timeout.
* 20191111 Document that --timeout argument can use 'h' as a modifier.
* 20191111 Docs: Reorganize Terms and Conventions, add Option/Arg/[]/<>.
* 20191112 Docs: Be consistent in how <> and [] are used in argument docs.
* 20191113 Docs: Define option types and assign to every option.
* 20191113 Docs: General typo and consistency fixes.
* 20191122 Docs: Establish project standards for POD formatting and
           make first pass at applying.
* 20191220 Docs: Fix incorrect example used in --attach-body definition.
* 20191221 Docs: merge OpossumPetya's web page changes, use better web
           practices and make mobile friendly
* 20200118 Docs: misc web page changes. tweak pre font size to prevent
           scrolling, remove stray quotes, remove the news section from index
           add announcement to versions, link to both plaintext and
           rendered docs, etc
* 20200425 Fix strange issue where GMT offset could oscillate on days of DST
           transition.  Time::Local is no longer used and POSIX is now
           required (#17, deb bug 955798)
* 20200801 Update copyright year to 2020
* 20200801 Fix bug which broke XCLIENT and STARTTLS used together (#21)
* 20201004 Update README.md to reflect changes from
           234db829dc6e6d45fe4da5f2bef075828ebc0ac7 (#22). Move to reference-
           style markdown links to make it easier to identify links that
           need to be changed for a release.